--- a/Simple-data-fetch-from-API/style.css
+++ b/Simple-data-fetch-from-API/style.css
@@ -6,10 +6,14 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-color: #ffe4f5;
 }
 
-.quote-container {
+.container {
     background: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -18,20 +22,14 @@ body {
     width: 90%;
 }
 
-#quote-text {
-    font-style: italic;
-    font-size: 1.2rem;
-    color: #333;
+#country-input{
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 12px;
 }
 
-#quote-author {
-    color: #666;
-    font-weight: 500;
-    margin-top: 10px;
-}
-
-button {
-    background-color: #007bff;
+#fetch-data-btn {
+    background-color: #e25aa4;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -40,6 +38,54 @@ button {
     transition: background 0.3s;
 }
 
-button:hover {
-    background-color: #0056b3;
+#fetch-data-btn:hover {
+    background-color: #8a175e;
+}
+
+.country-card {
+    background: #ffffff;
+    border-radius: 15px;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #fce4ec;
+    box-shadow: 0 10px 25px rgba(226, 90, 164, 0.1);
+}
+
+.country-card h1 {
+    color: #8a175e;
+    font-size: 1.6rem;
+    margin: 0 0 15px 0;
+    border-bottom: 2px solid #ffe4f5;
+    padding-bottom: 10px;
+}
+
+.country-card p {
+    margin: 8px 0;
+    color: #444;
+    font-size: 0.95rem;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.country-card strong {
+    color: #e25aa4;
+    font-weight: 600;
+}
+
+.country-card img {
+    width: 40%;
+    height: auto;
+    max-width: 250px;
+    border-radius: 8px;
+    margin-top: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+    border: 1px solid #eee;
+    margin-bottom: 20px;
+}
+
+.error {
+    color: red;
+    font-weight: bold;
+    margin: 0;
+    font-size: 12px;
 }
