fix color to get 100% on accessiblity(lighthouse)

--- a/variables.css
+++ b/variables.css
@@ -2,8 +2,8 @@
     --background: #ffe4f5;
     --white: #ffffff;
     --dark-color: #6e053f;
-    --tabs-color: #ecd1e2;
-    --pink-color: #e25aa4;
+    --tabs-color: #f7bde2;
+    --pink-color: #c11a76;
     --light-pink-color: #feedf4;
     --light-pink-color2:#fff5fa;
 
