--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
   min-height: 100vh;
   margin: 0;
   background-color: var(--background);
-  padding: 20px;
   overflow-x: hidden;
 }
 body nav {
@@ -85,7 +84,7 @@ body nav .nav-links .nav-link.active, body nav .nav-links .nav-link:hover {
 body footer {
   width: 80%;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 20px;
   border-top: 1px solid var(--tabs-color);
 }
 body footer .footer-text {
@@ -314,6 +313,13 @@ body footer .footer-text {
 
 .favorite-item-img {
   width: 30%;
+  height: 30%;
+  margin-bottom: 40px;
+}
+
+.image {
+  width: 30%;
+  height: 30%;
   margin-bottom: 40px;
 }
 
