fixed the scss document to be more accurate(in relation to the initial css)

--- a/_variables.scss
+++ b/_variables.scss
@@ -34,7 +34,7 @@ $transition-speed: 0.3s;
     --light-pink-color2: #b53173;
     --searches-color: #ffe7f3;
     --input-text-color: #380320;
-    --text-card-color: #a35782;
+    --text-card-color: #fcc5e5;
     --category-text-color: #f4dce9;
     --tab-text-color: #ffbadf;
     --red-color: #ff0000;
