--- a/_variables.scss
+++ b/_variables.scss
@@ -24,7 +24,7 @@ $transition-speed: 0.3s;
   }
 
   &.dark-theme {
-    --background: #1b0312;
+    --background: #31001e;
     --background-card: #610c34;
     --background-country-card: #950354;
     --dark-color: #fff3fa;
