--- a/variables.css
+++ b/variables.css
@@ -19,7 +19,7 @@
   --fave-title-text-color: #4c072a;
 }
 :root.dark-theme {
-  --background: #1b0312;
+  --background: #31001e;
   --background-card: #610c34;
   --background-country-card: #950354;
   --dark-color: #fff3fa;
